[package]
name = "flx"
version = "0.2.0"
authors = ["Jerome Rasky <jyrome.112@gmail.com>"]
description = "Full-text searching and scoring of strings"
repository = "https://github.com/jrasky/flx"
homepage = "https://github.com/jrasky/flx"
readme = "README.md"
keywords = ["search", "fuzzy", "string"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/flx"

[dependencies]
unicode-normalization = "0.1"

[dev-dependencies]
rand = "0.3"
